--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@ window.addEventListener("keydown", function(e) {
 
 </head>
 <body>
+	<script>
+		window.location="https://ubg98.github.io/HeadSoccer2023/";
+	</script>
 
 <script>
 if (location.protocol.substr(0, 4) === "file")
